notification 도메인 dto 의존성제거