@@ -1,7 +1,7 @@
 package jaeik.growfarm.domain.notification.application.service;
 
 import jaeik.growfarm.domain.notification.application.port.out.NotificationCommandPort;
-import jaeik.growfarm.infrastructure.adapter.notification.in.web.dto.UpdateNotificationDTO;
+import jaeik.growfarm.domain.notification.entity.NotificationUpdateCommand;
 import jaeik.growfarm.infrastructure.auth.CustomUserDetails;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
@@ -39,17 +39,15 @@ class NotificationCommandServiceTest {
     @DisplayName("알림 일괄 업데이트 - 성공")
     void shouldBatchUpdate_WhenValidInput() {
         // Given
-        UpdateNotificationDTO updateDto = new UpdateNotificationDTO();
         List<Long> readIds = Arrays.asList(1L, 2L, 3L);
         List<Long> deletedIds = Arrays.asList(4L, 5L);
-        updateDto.setReadIds(readIds);
-        updateDto.setDeletedIds(deletedIds);
+        NotificationUpdateCommand updateCommand = NotificationUpdateCommand.of(readIds, deletedIds);
 
         // When
-        notificationCommandService.batchUpdate(userDetails, updateDto);
+        notificationCommandService.batchUpdate(userDetails, updateCommand);
 
         // Then
-        verify(notificationCommandPort, times(1)).batchUpdate(userDetails, updateDto);
+        verify(notificationCommandPort, times(1)).batchUpdate(userDetails, updateCommand);
         verifyNoMoreInteractions(notificationCommandPort);
     }
 
@@ -57,16 +55,14 @@ class NotificationCommandServiceTest {
     @DisplayName("알림 일괄 업데이트 - 읽기 ID만 있는 경우")
     void shouldBatchUpdate_WhenOnlyReadIds() {
         // Given
-        UpdateNotificationDTO updateDto = new UpdateNotificationDTO();
         List<Long> readIds = Arrays.asList(1L, 2L);
-        updateDto.setReadIds(readIds);
-        updateDto.setDeletedIds(null);
+        NotificationUpdateCommand updateCommand = NotificationUpdateCommand.of(readIds, null);
 
         // When
-        notificationCommandService.batchUpdate(userDetails, updateDto);
+        notificationCommandService.batchUpdate(userDetails, updateCommand);
 
         // Then
-        verify(notificationCommandPort, times(1)).batchUpdate(userDetails, updateDto);
+        verify(notificationCommandPort, times(1)).batchUpdate(userDetails, updateCommand);
         verifyNoMoreInteractions(notificationCommandPort);
     }
 
@@ -74,16 +70,14 @@ class NotificationCommandServiceTest {
     @DisplayName("알림 일괄 업데이트 - 삭제 ID만 있는 경우")
     void shouldBatchUpdate_WhenOnlyDeletedIds() {
         // Given
-        UpdateNotificationDTO updateDto = new UpdateNotificationDTO();
         List<Long> deletedIds = Arrays.asList(3L, 4L, 5L);
-        updateDto.setReadIds(null);
-        updateDto.setDeletedIds(deletedIds);
+        NotificationUpdateCommand updateCommand = NotificationUpdateCommand.of(null, deletedIds);
 
         // When
-        notificationCommandService.batchUpdate(userDetails, updateDto);
+        notificationCommandService.batchUpdate(userDetails, updateCommand);
 
         // Then
-        verify(notificationCommandPort, times(1)).batchUpdate(userDetails, updateDto);
+        verify(notificationCommandPort, times(1)).batchUpdate(userDetails, updateCommand);
         verifyNoMoreInteractions(notificationCommandPort);
     }
 
@@ -91,15 +85,13 @@ class NotificationCommandServiceTest {
     @DisplayName("알림 일괄 업데이트 - 빈 리스트인 경우")
     void shouldBatchUpdate_WhenEmptyLists() {
         // Given
-        UpdateNotificationDTO updateDto = new UpdateNotificationDTO();
-        updateDto.setReadIds(List.of());
-        updateDto.setDeletedIds(List.of());
+        NotificationUpdateCommand updateCommand = NotificationUpdateCommand.of(List.of(), List.of());
 
         // When
-        notificationCommandService.batchUpdate(userDetails, updateDto);
+        notificationCommandService.batchUpdate(userDetails, updateCommand);
 
         // Then
-        verify(notificationCommandPort, times(1)).batchUpdate(userDetails, updateDto);
+        verify(notificationCommandPort, times(1)).batchUpdate(userDetails, updateCommand);
         verifyNoMoreInteractions(notificationCommandPort);
     }
 
@@ -107,13 +99,13 @@ class NotificationCommandServiceTest {
     @DisplayName("알림 일괄 업데이트 - null DTO인 경우")
     void shouldBatchUpdate_WhenNullDto() {
         // Given
-        UpdateNotificationDTO updateDto = null;
+        NotificationUpdateCommand updateCommand = null;
 
         // When
-        notificationCommandService.batchUpdate(userDetails, updateDto);
+        notificationCommandService.batchUpdate(userDetails, updateCommand);
 
         // Then
-        verify(notificationCommandPort, times(1)).batchUpdate(userDetails, updateDto);
+        verify(notificationCommandPort, times(1)).batchUpdate(userDetails, updateCommand);
         verifyNoMoreInteractions(notificationCommandPort);
     }
 
@@ -122,15 +114,13 @@ class NotificationCommandServiceTest {
     void shouldBatchUpdate_WhenNullUser() {
         // Given
         CustomUserDetails nullUserDetails = null;
-        UpdateNotificationDTO updateDto = new UpdateNotificationDTO();
-        updateDto.setReadIds(Arrays.asList(1L, 2L));
-        updateDto.setDeletedIds(List.of(3L));
+        NotificationUpdateCommand updateCommand = NotificationUpdateCommand.of(Arrays.asList(1L, 2L), List.of(3L));
 
         // When
-        notificationCommandService.batchUpdate(nullUserDetails, updateDto);
+        notificationCommandService.batchUpdate(nullUserDetails, updateCommand);
 
         // Then
-        verify(notificationCommandPort, times(1)).batchUpdate(nullUserDetails, updateDto);
+        verify(notificationCommandPort, times(1)).batchUpdate(nullUserDetails, updateCommand);
         verifyNoMoreInteractions(notificationCommandPort);
     }
 
@@ -138,17 +128,15 @@ class NotificationCommandServiceTest {
     @DisplayName("알림 일괄 업데이트 - 대량 데이터")
     void shouldBatchUpdate_WhenLargeDataSet() {
         // Given
-        UpdateNotificationDTO updateDto = new UpdateNotificationDTO();
         List<Long> largeReadIds = Arrays.asList(1L, 2L, 3L, 4L, 5L, 6L, 7L, 8L, 9L, 10L);
         List<Long> largeDeletedIds = Arrays.asList(11L, 12L, 13L, 14L, 15L, 16L, 17L, 18L, 19L, 20L);
-        updateDto.setReadIds(largeReadIds);
-        updateDto.setDeletedIds(largeDeletedIds);
+        NotificationUpdateCommand updateCommand = NotificationUpdateCommand.of(largeReadIds, largeDeletedIds);
 
         // When
-        notificationCommandService.batchUpdate(userDetails, updateDto);
+        notificationCommandService.batchUpdate(userDetails, updateCommand);
 
         // Then
-        verify(notificationCommandPort, times(1)).batchUpdate(userDetails, updateDto);
+        verify(notificationCommandPort, times(1)).batchUpdate(userDetails, updateCommand);
         verifyNoMoreInteractions(notificationCommandPort);
     }
 
@@ -156,17 +144,15 @@ class NotificationCommandServiceTest {
     @DisplayName("알림 일괄 업데이트 - 음수 ID 값")
     void shouldBatchUpdate_WhenNegativeIds() {
         // Given
-        UpdateNotificationDTO updateDto = new UpdateNotificationDTO();
         List<Long> readIds = Arrays.asList(-1L, -2L);
         List<Long> deletedIds = Arrays.asList(-3L, -4L);
-        updateDto.setReadIds(readIds);
-        updateDto.setDeletedIds(deletedIds);
+        NotificationUpdateCommand updateCommand = NotificationUpdateCommand.of(readIds, deletedIds);
 
         // When
-        notificationCommandService.batchUpdate(userDetails, updateDto);
+        notificationCommandService.batchUpdate(userDetails, updateCommand);
 
         // Then
-        verify(notificationCommandPort, times(1)).batchUpdate(userDetails, updateDto);
+        verify(notificationCommandPort, times(1)).batchUpdate(userDetails, updateCommand);
         verifyNoMoreInteractions(notificationCommandPort);
     }
 
@@ -174,17 +160,15 @@ class NotificationCommandServiceTest {
     @DisplayName("알림 일괄 업데이트 - 0 값 ID")
     void shouldBatchUpdate_WhenZeroIds() {
         // Given
-        UpdateNotificationDTO updateDto = new UpdateNotificationDTO();
         List<Long> readIds = List.of(0L);
         List<Long> deletedIds = List.of(0L);
-        updateDto.setReadIds(readIds);
-        updateDto.setDeletedIds(deletedIds);
+        NotificationUpdateCommand updateCommand = NotificationUpdateCommand.of(readIds, deletedIds);
 
         // When
-        notificationCommandService.batchUpdate(userDetails, updateDto);
+        notificationCommandService.batchUpdate(userDetails, updateCommand);
 
         // Then
-        verify(notificationCommandPort, times(1)).batchUpdate(userDetails, updateDto);
+        verify(notificationCommandPort, times(1)).batchUpdate(userDetails, updateCommand);
         verifyNoMoreInteractions(notificationCommandPort);
     }
 
@@ -192,17 +176,15 @@ class NotificationCommandServiceTest {
     @DisplayName("알림 일괄 업데이트 - 매우 큰 ID 값")
     void shouldBatchUpdate_WhenVeryLargeIds() {
         // Given
-        UpdateNotificationDTO updateDto = new UpdateNotificationDTO();
         List<Long> readIds = Arrays.asList(Long.MAX_VALUE, Long.MAX_VALUE - 1);
         List<Long> deletedIds = Arrays.asList(Long.MAX_VALUE - 2, Long.MAX_VALUE - 3);
-        updateDto.setReadIds(readIds);
-        updateDto.setDeletedIds(deletedIds);
+        NotificationUpdateCommand updateCommand = NotificationUpdateCommand.of(readIds, deletedIds);
 
         // When
-        notificationCommandService.batchUpdate(userDetails, updateDto);
+        notificationCommandService.batchUpdate(userDetails, updateCommand);
 
         // Then
-        verify(notificationCommandPort, times(1)).batchUpdate(userDetails, updateDto);
+        verify(notificationCommandPort, times(1)).batchUpdate(userDetails, updateCommand);
         verifyNoMoreInteractions(notificationCommandPort);
     }
 
@@ -210,17 +192,15 @@ class NotificationCommandServiceTest {
     @DisplayName("알림 일괄 업데이트 - 중복 ID 값")
     void shouldBatchUpdate_WhenDuplicateIds() {
         // Given
-        UpdateNotificationDTO updateDto = new UpdateNotificationDTO();
         List<Long> readIds = Arrays.asList(1L, 1L, 2L, 2L, 3L);
         List<Long> deletedIds = Arrays.asList(4L, 4L, 5L);
-        updateDto.setReadIds(readIds);
-        updateDto.setDeletedIds(deletedIds);
+        NotificationUpdateCommand updateCommand = NotificationUpdateCommand.of(readIds, deletedIds);
 
         // When
-        notificationCommandService.batchUpdate(userDetails, updateDto);
+        notificationCommandService.batchUpdate(userDetails, updateCommand);
 
         // Then
-        verify(notificationCommandPort, times(1)).batchUpdate(userDetails, updateDto);
+        verify(notificationCommandPort, times(1)).batchUpdate(userDetails, updateCommand);
         verifyNoMoreInteractions(notificationCommandPort);
     }
 
@@ -228,17 +208,15 @@ class NotificationCommandServiceTest {
     @DisplayName("알림 일괄 업데이트 - read와 delete ID가 겹치는 경우")
     void shouldBatchUpdate_WhenReadAndDeleteIdsOverlap() {
         // Given
-        UpdateNotificationDTO updateDto = new UpdateNotificationDTO();
         List<Long> readIds = Arrays.asList(1L, 2L, 3L);
         List<Long> deletedIds = Arrays.asList(2L, 3L, 4L); // 2L, 3L이 중복
-        updateDto.setReadIds(readIds);
-        updateDto.setDeletedIds(deletedIds);
+        NotificationUpdateCommand updateCommand = NotificationUpdateCommand.of(readIds, deletedIds);
 
         // When
-        notificationCommandService.batchUpdate(userDetails, updateDto);
+        notificationCommandService.batchUpdate(userDetails, updateCommand);
 
         // Then
-        verify(notificationCommandPort, times(1)).batchUpdate(userDetails, updateDto);
+        verify(notificationCommandPort, times(1)).batchUpdate(userDetails, updateCommand);
         verifyNoMoreInteractions(notificationCommandPort);
     }
 
@@ -246,15 +224,13 @@ class NotificationCommandServiceTest {
     @DisplayName("알림 일괄 업데이트 - 둘 다 null인 경우")
     void shouldBatchUpdate_WhenBothListsAreNull() {
         // Given
-        UpdateNotificationDTO updateDto = new UpdateNotificationDTO();
-        updateDto.setReadIds(null);
-        updateDto.setDeletedIds(null);
+        NotificationUpdateCommand updateCommand = NotificationUpdateCommand.of(null, null);
 
         // When
-        notificationCommandService.batchUpdate(userDetails, updateDto);
+        notificationCommandService.batchUpdate(userDetails, updateCommand);
 
         // Then
-        verify(notificationCommandPort, times(1)).batchUpdate(userDetails, updateDto);
+        verify(notificationCommandPort, times(1)).batchUpdate(userDetails, updateCommand);
         verifyNoMoreInteractions(notificationCommandPort);
     }
 }
